--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ DEALINGS IN THE SOFTWARE.
 		<script src="js/engine/vector.js"></script>
 		<script src="js/engine/utils.js"></script>
 		<script src="js/engine/input.js"></script>
+		<script src="js/engine/sound.js"></script>
 		<script src="js/engine/assets.js"></script>
 		<script src="js/engine/renderer.js"></script>
 		<script src="js/engine/map.js"></script>
