Add particle systems (WIP)

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ DEALINGS IN THE SOFTWARE.
 		<script src="js/engine/renderer.js"></script>
 		<script src="js/engine/map.js"></script>
 		<script src="js/engine/font.js"></script>
+		<script src="js/engine/particle_system.js"></script>
 		<script src="js/engine/core.js"></script>
 
 		<!-- game -->
