--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 The MIT License (MIT)
 
-Copyright (c) 2017 cd2 (cdqwertz) <cdqwertz@gmail.com>
+Copyright (c) 2017 cdqwertz <cdqwertz@gmail.com>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this
 software and associated documentation files (the "Software"), to deal in the Software
